2007-08-29  Stephen Croll  <croll@mobilemetrics.net>

	* initial version

2007-10-09  Stephen Croll <stephen.d.croll@gmail.com>

	* TLVs defined in XML files.
	
	* packet-wimaxasncp.c: fixed memory leak in function
	  wimaxasncp_dissect_tlv_value()
