@@ -55,6 +55,7 @@ enum
     WIMAXASNCP_TLV_PROTOCOL_LIST,
     WIMAXASNCP_TLV_PORT_RANGE_LIST,
     WIMAXASNCP_TLV_IP_ADDRESS_MASK_LIST,
+    WIMAXASNCP_TLV_EAP,
     WIMAXASNCP_TLV_VENDOR_SPECIFIC
 };
 
